wildcard/test/corpus/wildcards.txt
===============================================================================
Plain text
===============================================================================

a

-------------------------------------------------------------------------------

(source
  (text))

===============================================================================
Simple wildcard
===============================================================================

{a}

-------------------------------------------------------------------------------

(source
  (text)
  (wildcard
    name: (name))
  (text))

===============================================================================
Wildcard with constraint
===============================================================================

{a,\d+}

-------------------------------------------------------------------------------

(source
  (text)
  (wildcard
    name: (name)
    constraint: (constraint))
  (text))

===============================================================================
Wildcard: constraint containing {N} quantifier
===============================================================================

{a,x\d{3}}{b}

-------------------------------------------------------------------------------

(source
  (text)
  (wildcard
    name: (name)
    constraint: (constraint))
  (wildcard
    name: (name))
  (text))

===============================================================================
Wildcard with format flag
===============================================================================

{input:q}

-------------------------------------------------------------------------------

(source
  (text)
  (wildcard
    name: (name)
    flag: (flag))
  (text))

===============================================================================
Name with attribute access
===============================================================================

{output.a}

-------------------------------------------------------------------------------

(source
  (text)
  (wildcard
    name: (name))
  (text))

===============================================================================
Name with subscript
===============================================================================

{input[3]}

-------------------------------------------------------------------------------

(source
  (text)
  (wildcard
    name: (name))
  (text))

===============================================================================
Name with attribute and subscript chain
===============================================================================

{input.a.b[3].x}

-------------------------------------------------------------------------------

(source
  (text)
  (wildcard
    name: (name))
  (text))

===============================================================================
Multiple wildcards
===============================================================================

{a}{b}

-------------------------------------------------------------------------------

(source
  (text)
  (wildcard
    name: (name))
  (wildcard
    name: (name))
  (text))

===============================================================================
Escaped open brace
===============================================================================

{{

-------------------------------------------------------------------------------

(source
  (text)
  (escaped_brace)
  (text))

===============================================================================
Escaped braces around text
===============================================================================

{{input}}

-------------------------------------------------------------------------------

(source
  (text)
  (escaped_brace)
  (text)
  (escaped_brace)
  (text))

===============================================================================
Mixed: escaped braces and wildcard
===============================================================================

{{input}}{output}

-------------------------------------------------------------------------------

(source
  (text)
  (escaped_brace)
  (text)
  (escaped_brace)
  (wildcard
    name: (name))
  (text))

===============================================================================
Mixed: text, wildcard, text
===============================================================================

prefix/{sample}/suffix

-------------------------------------------------------------------------------

(source
  (text)
  (wildcard
    name: (name))
  (text))

===============================================================================
Multiple wildcards and escaped brace
===============================================================================

{{input}}{output}{{}}

-------------------------------------------------------------------------------

(source
  (text)
  (escaped_brace)
  (text)
  (escaped_brace)
  (wildcard
    name: (name))
  (escaped_brace)
  (escaped_brace)
  (text))

===============================================================================
Unbalanced brace (invalid Snakemake, produces error)
===============================================================================

{{a}{b}

-------------------------------------------------------------------------------

(source
  (text)
  (escaped_brace)
  (text)
  (ERROR)
  (wildcard
    name: (name))
  (text))
